--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - sudo apt-get install capnproto
   - go get -u github.com/jteeuwen/go-bindata/...
   - sudo apt-get install -y python3 python3-pip
-  - sudo pip3 install autopep8
+  - sudo pip3 install black
   - sudo pip3 install -r codegen/python/gentest/requirements.txt
 go:
   - 1.8
