--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ install:
   - sudo apt-get install capnproto
   - go get -u github.com/jteeuwen/go-bindata/...
   - sudo apt-get install -y python3 python3-pip
-  - sudo pip3 install black isort
+  - sudo pip3 install black
+  - sudo pip3 install isort
   - sudo pip3 install -r codegen/python/gentest/requirements.txt
 go:
   - 1.8
@@ -18,6 +19,9 @@ script:
   - make test
   - make gogentest
   - make pygentest
+
+after_success:
+  - codecov
 
 notifications:
   slack:
